--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -533,7 +533,7 @@
     <!-- /.container-fluid -->
 </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-patient-details", AreaLabeledId = "modal-action-patient-details-label", Size = ModalSize.Medium }' />
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-patient-details", AreaLabeledId = "modal-action-patient-details-label", Size = Globals.ModalSize.Medium }' />
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
