--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -126,7 +126,7 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-patient", AreaLabeledId = "modal-action-patient-label", Size = ModalSize.Medium }' /> 
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-patient", AreaLabeledId = "modal-action-patient-label", Size = Globals.ModalSize.Medium }' /> 
 
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
