--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -71,7 +71,7 @@
 <a id="linkEdit" asp-action="EditTreatmentPlace" data-toggle="modal" data-target="#modal-action"></a>
 <a id="linkAjaxDT" asp-action="GetDTResponseAsync" asp-controller="TreatmentPlaceApi" data-toggle="modal" data-target="#modal-action"></a>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = ModalSize.Medium }' />
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
 @section scripts
     {
