--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -31,7 +31,7 @@
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddUser" data-toggle="modal" data-target="#modal-action-user" class="btn btn-primary">
+                                            <a asp-action="AddUser" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                                 <i class="fa fa-plus"></i> Adicionar Usuário
                                             </a>
                                         </div>
@@ -71,12 +71,12 @@
                                                     @item.Role
                                                 </td>
                                                 <td>
-                                                    @if (User.Identity.Name != "felipepergher_10@hotmail.com")
+                                                    @if (item.Email != "felipepergher_10@hotmail.com")
                                                     {
-                                                        <a asp-action="EditUser" asp-route-id="@item.UserId" data-toggle="modal" data-target="#modal-action-user" class="btn btn-secondary">
+                                                        <a asp-action="EditUser" asp-route-id="@item.UserId" data-toggle="modal" data-target="#modal-action" class="btn btn-secondary">
                                                             <i class="fa fa-user-edit"></i> Editar
                                                         </a>
-                                                        <a asp-action="DeleteUser" asp-route-id="@item.UserId" data-toggle="modal" data-target="#modal-action-user" class="btn btn-danger">
+                                                        <a asp-action="DeleteUser" asp-route-id="@item.UserId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
                                                             <i class="fa fa-times"></i> Deletar
                                                         </a>
                                                     }
@@ -99,7 +99,7 @@
     <!-- /.conainer-fluid -->
 </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action-user", AreaLabeledId = "modal-action-user-label", Size = ModalSize.Medium }' />
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
 @section scripts
     {
