--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.Patient>
+﻿@model IEnumerable<LigaCancer.Data.Models.PatientModels.Patient>
 @using LigaCancer.Code
 @{
     ViewData["Title"] = "Pacientes";
@@ -24,33 +24,6 @@
             <div class="animated fadeIn">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="card card-default">
-                            <div class="card-header">
-                                Filtro
-                            </div>
-
-                            <form asp-action="Index" method="get">
-                                <div class="card-block ">
-                                    <div class="form-horizontal">
-                                        <div class="form-group row">
-                                            <label class="col-md-3 form-control-label">Nome</label>
-                                            <div class="col-md-9">
-                                                <input class="form-control" name="searchNameString" value="@ViewData["CurrentSearchNameFilter"]" type="text">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="card-footer ">
-                                    <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i>Resetar</button>
-                                    <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle"></i> Enviar</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
                                 <i class="fa fa-address-card-o"></i> Pacientes
@@ -70,17 +43,7 @@
                                     <thead>
                                         <tr>
                                             <th>
-                                                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-page="@Model.PageIndex">
-                                                    @if (ViewData["NameSortParm"].ToString() == "name_desc")
-                                                    {
-                                                        <span class="fa fa-sort-alpha-down"></span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="fa fa-sort-alpha-up"></span>
-                                                    }
-                                                    @Html.DisplayNameFor(model => model.FirstOrDefault().FirstName)
-                                                </a>
+                                                Nome
                                             </th>
                                             <th>
                                                 Ações
@@ -109,8 +72,6 @@
                                         }
                                     </tbody>
                                 </table>
-
-                                <partial name="_PaginationPatient" model="Model" />
 
                             </div>
                         </div>
