--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -39,19 +39,7 @@
 
                                 <hr />
 
-                                <table class="table table-bordered table-striped table-condensed text-center" id="medicineTable">
-                                    <thead>
-                                        <tr>
-                                            <th>
-                                                Nome
-                                            </th>
-                                            <th>
-                                                Ações
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    <tbody></tbody>
-                                </table>
+                                <table class="table table-bordered table-striped table-condensed text-center" id="medicineTable"></table>
 
                             </div>
                         </div>
