--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -44,13 +44,13 @@
                                     <thead>
                                         <tr>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.FirstName)
+                                                Nome
                                             </th>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.Email)
+                                                Email
                                             </th>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.Role)
+                                                Regra
                                             </th>
                                             <th>
                                                 Ações
