--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -39,7 +39,7 @@
 
                                 <hr />
 
-                                <table class="table table-bordered table-striped table-condensed" id="cancerTypeTable"></table>
+                                <table class="table table-bordered table-striped table-condensed text-center" id="cancerTypeTable"></table>
 
                             </div>
                         </div>
