--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -60,7 +60,7 @@
 <a id="linkShow" asp-action="DetailsPatient"></a>
 <a id="linkDelete" asp-action="DisablePatient" data-toggle="modal" data-target="#modal-action"></a>
 <a id="linkEdit" asp-action="EditPatient" data-toggle="modal" data-target="#modal-action"></a>
-<a id="linkAjaxDT" asp-action="GetDTResponseAsync" asp-controller="PatientApi" data-toggle="modal" data-target="#modal-action"></a>
+<a id="linkAjaxDT" asp-action="GetPatientDataTableResponseAsync" asp-controller="PatientApi" data-toggle="modal" data-target="#modal-action"></a>
 
 <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
