Added icons on buttons

--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -77,7 +77,7 @@
                                                             <i class="fa fa-user-edit"></i> Editar
                                                         </a>
                                                         <a asp-action="DeleteUser" asp-route-id="@item.UserId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
-                                                            <i class="fa fa-times"></i> Deletar
+                                                            <i class="fa fa-user-times"></i> Deletar
                                                         </a>
                                                     }
                                                 </td>
