--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Patient" class="nav-link">
-                            <i class="nav-icon fa fa-child"></i> Pacientes
+                            <i class="nav-icon fa fa-male"></i> Pacientes
                         </a>
                     </li>
                     @*<li class="nav-item">
