--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-address-card-o"></i> Médicos
+                                <i class="fa fa-user-md"></i> Médicos
                             </div>
                             <div class="card-block">
                                 <div class="form-inline">
