--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-address-card-o"></i> Remédios
+                                <i class="fa fa-capsules"></i> Remédios
                             </div>
                             <div class="card-block">
                                 <div class="form-inline">
