--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -26,7 +26,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-address-card-o"></i> Pacientes
+                                <i class="fa fa-male"></i> Pacientes
                             </div>
                             <div class="card-block">
                                 <div class="form-inline">
